fixed minor 'search' button spacing issue where it looked to be slightly misaligned on the bottom of the input

--- a/client/src/components/searchBar/searchBar.module.scss
+++ b/client/src/components/searchBar/searchBar.module.scss
@@ -10,7 +10,6 @@
 }
 .searchBarButton {
   position: absolute;
-  top: 0;
   bottom: 0;
   right: 0;
   z-index: 9;
